# SEO-Checker

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: build-images.yml
alembic/: env.py
alembic/versions/: 0002_users.py  0003_audit_log.py  0004_audit_user_fk_and_settings.py  fc3f80676f0e_initial_audits_table.py
app/: config.py  db.py  main.py
app/auditor/: runner.py  scoring.py
app/auditor/collectors/: accessibility.py  base.py  headings.py  images.py  (+4 more)
app/auth/: csrf.py  dependencies.py  passwords.py  sessions.py
app/middleware/: audit_log.py  csrf.py  ssrf.py
app/models/: __init__.py  audit.py  audit_log.py  user.py
app/reports/: charts.py  pdf.py
app/routers/: admin.py  audits.py  auth.py  frontend.py
app/schemas/: audit.py  audit_log.py  user.py
app/services/: backup.py  playwright_runner.py
app/static/: style.css
app/tasks/: audit.py  backup.py  celery_app.py
app/templates/: admin_audit_log.html  admin_backups.html  admin_dashboard.html  admin_users.html  audit_compare.html  audit_form.html  audit_history.html  audit_result.html  base.html  dashboard.html  login.html  register.html
cloud-init/: app.yaml  backup.yaml  db.yaml
compose/: docker-compose.app.yml  docker-compose.backup.yml  docker-compose.db.yml  docker-compose.dev.yml
docker/: Dockerfile.app  Dockerfile.cron  Dockerfile.worker
docs/: BACKUP.md  DEPLOYMENT.md  INSTRUCTION.md
nginx/: app.conf
scripts/: backup.sh  deploy.sh  restore.sh
tests/: conftest.py  test_audit_full.py  test_auth.py  test_ssrf.py
(+3 files in other folders)
