[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "seo-auditor"
version = "0.1.0"
description = "SEO audit tool with headless Chromium and PDF reports"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "sqlalchemy[asyncio]>=2.0",
  "asyncpg>=0.30",
  "alembic>=1.14",
  "psycopg2-binary>=2.9",
  "pydantic>=2.9",
  "pydantic-settings>=2.6",
  "celery[redis]>=5.4",
  "redis>=5.2",
  "playwright>=1.49",
  "beautifulsoup4>=4.12",
  "lxml>=5.3",
  "httpx>=0.28",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "ruff>=0.8",
  "pre-commit>=4.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
